# job_scheduler_demo

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
CMakeModules/: catch.cmake  config.cmake
scheduler/: CMakeLists.txt
scheduler/src/: main.cpp
scheduler_lib/: CMakeLists.txt
scheduler_lib/include/: job_graph.h  simplified_dot_parser.h
scheduler_lib/src/: lib.cpp
test/: CMakeLists.txt
test/resources/: test_graph.txt  test_ref_graph.txt
test/src/: main.cpp  test_dot_parser.cpp  test_graph.cpp
